[package]
name = "kornia_aprilgrid"
version = "0.1.0"
license.workspace = true
license-file.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

# [patch.crates-io]
# kornia = { git = "https://github.com/kornia/kornia-rs", rev = "67f4185" }

[dependencies]
kornia = { version = "0.1.8", features = ["gstreamer"] }
aprilgrid = { version = "0.6.1", features = ["kornia"] }
rerun = "0.23"
env_logger = "0.11"
log = "0.4"
argh = "0.1"
ctrlc = "3"
rand = { version = "0.9", features = ["small_rng", "thread_rng"] }
