[package]
name = "kornia_apriltag_visualization"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
rerun = "0.23"
# If this branch/commit doesn't exists, then try the main branch because the PR might have been merged
kornia-image = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306" }
kornia-imgproc = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306" }
kornia-apriltag = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306" }
kornia-io = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306", features = [
    "gstreamer",
] }
ctrlc = "3.4"
rand = "0.9"
