[package]
name = "kornia_apriltag_visualization"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true

[profile.release]
debug = true # For performance profiling

[dependencies]
rerun = "0.23"
# If this branch/commit doesn't exists, then try the main branch because the PR might have been merged
kornia-image = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306" }
kornia-imgproc = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306" }
kornia-apriltag = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306" }
kornia-io = { git = "https://github.com/kornia/kornia-rs.git", rev = "563b306", features = [
    "gstreamer",
] }
ctrlc = "3.4"
rand = "0.9"

[dev-dependencies]
apriltag = "0.4"
measurements = "0.11"
noisy_float = "0.2"

criterion = "0.6"
rayon = "1"

[[bin]]
name = "real_img"
path = "./src/real_img.rs"

[[bench]]
name = "synthetic_image"
harness = false
