[package]
name = "tile_iterator_benchmark"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
license-file.workspace = true

[[bench]]
name = "single_thread"
harness = false

[dependencies]
kornia-image = "0.1.8"

[dev-dependencies]
kornia-io = "0.1.8"
criterion = "0.6"
tempfile = "3.20"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
